plugins {
    id 'application'
    id 'org.beryx.jlink' version '2.23.5'
}

import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

setVersion '2.7-SNAPSHOT'

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16
}

apply from: "gradle/jvm_args.gradle"
apply from: "gradle/image.gradle"
apply from: "gradle/dependencies.gradle"

application {
    mainModule = 'com.crschnick.pdx_unlimiter.app'
    mainClass = 'com.crschnick.pdx_unlimiter.app.Main'
    applicationDefaultJvmArgs = pdxuJvmArgs + ["-ea"]
}

dependencies {
    implementation project(':core')
    implementation project(':editor')
    implementation project(':app')
}


task createDist(type: Zip, dependsOn: createImage) {
    destinationDirectory = buildDir
    archivesBaseName = "pdx_unlimiter"
    archiveAppendix = DefaultNativePlatform.currentOperatingSystem.windows ? "windows" : "linux"
    archiveVersion = ""
    from "${buildDir}/image"
}
